--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <body>
+        <h1>Hello, World!</h1>
+    </body>
     <style>
         body {
             font-family: Arial, sans-serif;
